kubernetes/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react-app
  namespace: pricelist-system
spec:
  selector:
    matchLabels:
      app: react-app
  replicas: 1
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-container
          image: davidcopoeru/pricelist-frontend:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-app
  labels:
        app: react-app
  namespace: pricelist-system
spec:
  type: NodePort
  selector:
    app: react-app
  ports:
  - port: 3000
    targetPort: 3000
